k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orbit-resume
  labels:
    app: orbit-resume
spec:
  type: ClusterIP
  selector:
    app: orbit-resume
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
